@@ -6,8 +6,8 @@ pr86231.c from the execute part of the gcc torture tests.
 
 /* PR tree-optimization/86231 */
 
-#define ONE ((void *) 1)
-#define TWO ((void *) 2)
+#define ONE ((__xdata void *) 1)
+#define TWO ((__xdata void *) 2)
 
 int
 foo (void *p, int x)
@@ -23,14 +23,13 @@ int v[8];
 void
 testTortureExecute (void)
 {
-  if (foo ((void *) 0, 0) != 0
-      || foo ((void *) 0, 1) != 1
-      || foo (ONE, 0) != 0
-      || foo (ONE, 1) != 0
-      || foo (TWO, 0) != 1
-      || foo (TWO, 1) != 1
-      || foo (&v[7], 0) != 1
-      || foo (&v[7], 1) != 1)
-    ASSERT (0);
+  ASSERT (foo ((void *) 0, 0) == 0);
+  ASSERT (foo ((void *) 0, 1) == 1);
+  ASSERT (foo (ONE, 0) == 0);
+  ASSERT (foo (ONE, 1) == 0);
+  ASSERT (foo (TWO, 0) == 1);
+  ASSERT (foo (TWO, 1) == 1);
+  ASSERT (foo (&v[7], 0) == 1);
+  ASSERT (foo (&v[7], 1) == 1);
   return;
 }
